--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Danny Silitonga">
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <title>Data Dashboard</title>
+    <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
 </head>
 <body>
     <div class="about">
