--- a/templates/index.html
+++ b/templates/index.html
@@ -9,20 +9,22 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <title>Data Dashboard</title>
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 </head>
 <body>
     <div class="about">
-        <h1>Data Dashboard</h1>
+        <h1>Youtube Sentiment Dashboard</h1>
         <h2>Project: Interactive charts for fronted data Visualization using flask and D3js</h2>
         <h2>Author: Danny Silitonga</h2>
-        <p>Bio: Danny Silitonga is a Technology Business Analyst.
-           He has experience in Data Science and Analytics, Software Engineering, Product Resaerch, and Technical Writing.</p>
-        <p>Project Overview: The project is focused on the analysis of churned customers.
-           This analysis is achieved using Python's Flask libary to serve the data and Javascript D3.js library to visualize the analysis. 
-           The use case is the Telco Customer Churn found on Kaggle <a href="https://www.kaggle.com/blastchar/telco-customer-churn">here</a>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Project Overview: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <a href="https://www.kaggle.com/blastchar/telco-customer-churn">here</a>
         </p>
         <h4>The code can be found on Github <a href="https://github.com/dannysilitonga/Interactive-charts-for-frontend-data-visualization-using-flask-and-D3js">here</a></h4>
-        <h4>The article can be found on Logrocket blog <a href="https://blog.logrocket.com/build-interactive-charts-flask-d3js/">here</a></h4>
+        <h4>The article can be found on deployment blog <a href="https://blog.logrocket.com/build-interactive-charts-flask-d3js/">here</a></h4>
+        <form>
+            <a href=# id=test><button class='btn btn-default'>Get Youtube Data</button></a>
+        </form>
+
         <img src="{{ url_for('static', filename='logo.jpeg')}}" alt="Logrocket logo">
         </div>
 
@@ -42,4 +44,17 @@
 <script src = "{{ url_for('static', filename='js/barChart.js') }}"></script> 
 <script src = "{{ url_for('static', filename='js/updateBarChart.js') }}"></script>
 <script src = "{{ url_for('static', filename='js/index.js') }}"></script>
+
+<script type=text/javascript>
+    $(function() {
+      $('a#test').on('click', function(e) {
+        e.preventDefault()
+        $.getJSON('/get_youtube_data',
+            function(data) {
+          //do nothing
+        });
+        return false;
+      });
+    });
+</script>
 
